fix class bug in text-align style

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,6 +8,6 @@ body {
 p {
     font-weight: bold;
 }
-text-center{
+.text-center{
     text-align: center;
 }
